--- a/OOPs/rough.ipynb
+++ b/OOPs/rough.ipynb
@@ -2,57 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Gadget:\n",
-    "    def __init__(self, type):\n",
-    "        self.type = type\n",
+    "class Atm:\n",
+    "    \n",
+    "    #class variable\n",
+    "    counter = 0\n",
     "\n",
-    "    def display(self):\n",
-    "        print(f\"this is a {self.type}\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Laptop(Gadget):\n",
-    "    def __init__(self, type,brand):\n",
-    "        super().__init__(type)\n",
-    "        self.brand = brand\n",
+    "    def __init__(self):\n",
+    "        self.pin = False\n",
+    "        self.balance = 0\n",
+    "        Atm.counter += 1\n",
     "\n",
-    "    def display(self):\n",
-    "        print(f\"this is a {self.type} and it belongs to the brand {self.brand}\")\n"
+    "\n",
+    "    def get_counter(self):\n",
+    "        print(f\"counter = {Atm.counter}\")\n",
+    "\n",
+    "\n",
+    "    def set_counter(self, new_counter):\n",
+    "        Atm.counter = new_counter\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = Laptop(\"Laptop\",\"Apple\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is a Laptop and it belongs to the brand Apple\n"
+      "counter = 11\n"
      ]
     }
    ],
    "source": [
-    "test.display()"
+    "# hdfc = Atm()\n",
+    "\n",
+    "hdfc.get_counter()\n",
+    "# hdfc.set_counter(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hdfc.counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "counter = 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "sbi = Atm()\n",
+    "sbi.get_counter()"
    ]
   },
   {
