file handling - file paths (relative)

--- a/anagram.ipynb
+++ b/anagram.ipynb
@@ -94,7 +94,98 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ba738226",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88c4a48e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f0085ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "106d62f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "d48d0168",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word1_dict = {'e': 3, 'l': 2, 'v': 1, 'n': 1, ' ': 2, 'p': 1, 'u': 1, 's': 1, 't': 1, 'w': 1, 'o': 1}\n",
+      "word2_dict = {'t': 1, 'w': 1, 'e': 3, 'l': 2, 'v': 1, ' ': 2, 'p': 1, 'u': 1, 's': 1, 'o': 1, 'n': 1}\n",
+      "Anagram\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Rough\n",
+    "\n",
+    "# anagram mean \n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "five pairs of words that are anagrams of each other\n",
+    "    Listen - Silent\n",
+    "    Astronomer - Moonstarer\n",
+    "    Dormitory - Dirty room\n",
+    "    Funeral - Real fun\n",
+    "    Eleven plus two - Twelve plus one\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "word1 = \"Eleven plus two\"\n",
+    "word2 = \"Twelve plus one\"\n",
+    "\n",
+    "word1_dict = {}\n",
+    "word2_dict = {}\n",
+    "for i in word1.lower():\n",
+    "    word1_dict[i] = word1_dict.get(i, 0) + 1\n",
+    "\n",
+    "\n",
+    "for i2 in word2.lower():\n",
+    "    word2_dict[i2] = word2_dict.get(i2, 0) + 1\n",
+    "\n",
+    "print(f\"word1_dict = {word1_dict}\")\n",
+    "print(f\"word2_dict = {word2_dict}\")\n",
+    "\n",
+    "\n",
+    "# check\n",
+    "\n",
+    "for i in word1_dict:\n",
+    "    if word1_dict[i] != word2_dict.get(i,0):\n",
+    "        print(\"Not anagram\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"Anagram\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d36d5d8f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -102,9 +193,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "test_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
