--- a/for-while-else-loop.ipynb
+++ b/for-while-else-loop.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Note</h3>\n",
+    "<ul>\n",
+    "<h5>\n",
+    "<li>In summary, the else clause in Python loops provides a way to execute code when the loop completes normally, <br/>\n",
+    "without early termination by a break statement</li>\n",
+    "<li>If the loop encounters a break, the else block is skipped\n",
+    "</h5>\n",
+    "</ul>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,62 +29,39 @@
     }
    ],
    "source": [
+    "# note : here both if and else block gets executed\n",
+    "\n",
     "numbers = [1, 2, 3, 4, 5]\n",
     "for num in numbers:\n",
     "    if num == 5:\n",
     "        print(\"Found 5\")\n",
-    "        # break\n",
     "else:\n",
     "    print(\"Did not find 5\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jobs - Interview\n",
-      "Personal Projects\n",
-      "Practice - NPMS\n",
-      "Practice - Python\n",
-      "Practice- Computer Vision\n",
-      "Practice-SQL\n",
-      "Time Series Analysis\n",
-      "venv\n"
+      "Found 5\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "# for i in os.listdir(\"../Practice - Python/\"):\n",
-    "for i in os.listdir(\"C:/Users/being/Dt Sci-Work/\"):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\being\\Dt Sci-Work\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
+    "# note : here only if block gets executed\n",
     "\n",
-    "current_directory = os.getcwd()  # Get the current working directory\n",
-    "parent_directory = os.path.dirname(current_directory)  # Get the parent directory\n",
-    "\n",
-    "print(parent_directory)\n"
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "for num in numbers:\n",
+    "    if num == 5:\n",
+    "        print(\"Found 5\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"Did not find 5\")"
    ]
   },
   {
@@ -83,7 +74,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -98,7 +89,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.2"
-  }
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
