--- a/file-handling/file-paths/file-paths.ipynb
+++ b/file-handling/file-paths/file-paths.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +131,303 @@
     "for i in os.listdir(\"../../../Practice - Python/\"):\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ./ is useless"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2017</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/4/2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/5/2017</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Snow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/6/2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/7/2017</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        day  temperature  windspeed  event\n",
+       "0  1/1/2017         32.0        6.0   Rain\n",
+       "1  1/4/2017          NaN        9.0  Sunny\n",
+       "2  1/5/2017         28.0        NaN   Snow\n",
+       "3  1/6/2017          NaN        7.0    NaN\n",
+       "4  1/7/2017         32.0        NaN   Rain"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"./weather_data.csv\").head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2017</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/4/2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/5/2017</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Snow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/6/2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/7/2017</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        day  temperature  windspeed  event\n",
+       "0  1/1/2017         32.0        6.0   Rain\n",
+       "1  1/4/2017          NaN        9.0  Sunny\n",
+       "2  1/5/2017         28.0        NaN   Snow\n",
+       "3  1/6/2017          NaN        7.0    NaN\n",
+       "4  1/7/2017         32.0        NaN   Rain"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"weather_data.csv\").head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        day  temperature  windspeed  event\n",
+      "0  1/1/2017         32.0        6.0   Rain\n",
+      "1  1/4/2017          NaN        9.0  Sunny\n",
+      "2  1/5/2017         28.0        NaN   Snow\n",
+      "3  1/6/2017          NaN        7.0    NaN\n",
+      "4  1/7/2017         32.0        NaN   Rain\n",
+      "******************\n",
+      "        day  temperature  windspeed  event\n",
+      "0  1/1/2017         32.0        6.0   Rain\n",
+      "1  1/4/2017          NaN        9.0  Sunny\n",
+      "2  1/5/2017         28.0        NaN   Snow\n",
+      "3  1/6/2017          NaN        7.0    NaN\n",
+      "4  1/7/2017         32.0        NaN   Rain\n"
+     ]
+    }
+   ],
+   "source": [
+    "# both are same\n",
+    "\n",
+    "print(pd.read_csv(\"data/weather_data.csv\").head())\n",
+    "print(\"******************\")\n",
+    "print(pd.read_csv(\"./data/weather_data.csv\").head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        day  temperature  windspeed  event\n",
+      "0  1/1/2017         32.0        6.0   Rain\n",
+      "1  1/4/2017          NaN        9.0  Sunny\n",
+      "2  1/5/2017         28.0        NaN   Snow\n",
+      "3  1/6/2017          NaN        7.0    NaN\n",
+      "4  1/7/2017         32.0        NaN   Rain\n",
+      "        day  temperature  windspeed  event\n",
+      "0  1/1/2017         32.0        6.0   Rain\n",
+      "1  1/4/2017          NaN        9.0  Sunny\n",
+      "2  1/5/2017         28.0        NaN   Snow\n",
+      "3  1/6/2017          NaN        7.0    NaN\n",
+      "4  1/7/2017         32.0        NaN   Rain\n"
+     ]
+    }
+   ],
+   "source": [
+    "# one - directory up\n",
+    "\n",
+    "print(pd.read_csv(\"../weather_data.csv\").head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        day  temperature  windspeed  event\n",
+      "0  1/1/2017         32.0        6.0   Rain\n",
+      "1  1/4/2017          NaN        9.0  Sunny\n",
+      "2  1/5/2017         28.0        NaN   Snow\n",
+      "3  1/6/2017          NaN        7.0    NaN\n",
+      "4  1/7/2017         32.0        NaN   Rain\n"
+     ]
+    }
+   ],
+   "source": [
+    "# two - directory up\n",
+    "\n",
+    "print(pd.read_csv(\"../../weather_data.csv\").head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
