--- a/DSA-Python/trees_bst.ipynb
+++ b/DSA-Python/trees_bst.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ref : yt - codebasics / video - Binary Tree Part 1 | BST | Binary Search Tree "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Notes\n",
+    "\n",
+    "<ul>\n",
+    "    <li>Binary Tree : every node has max 2 nodes</li>\n",
+    "    <li>Binary Search Tree : elements in left subtree are lesser than the element in current node \n",
+    "    wheras elements in right subtree are greater than the element in current node</li>\n",
+    "    <li></li>\n",
+    "</ul>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -36,7 +57,7 @@
     "                self.left.add_child(data)\n",
     "\n",
     "\n",
-    "            else: # in-case of root node, just add the element there\n",
+    "            else: # in-case of root node, just add the element there \n",
     "                self.left = BinarySearchTreeNode(data)\n",
     "\n",
     "        else: # add data in right subtree\n",
@@ -90,8 +111,7 @@
     "        if self.left is None: # agar left wala node empty h, iska mtlb minimum value mil gai\n",
     "            return self.data # wo minimum value hogi left wale node ke data me\n",
     "        \n",
-    "        return self.left.find_min() # agar left wala node empty nahi h,\n",
-    "                                    # to aur left me jao\n",
+    "        return self.left.find_min() # agar left wala node empty nahi h, to aur left me jao\n",
     "\n",
     "\n",
     "\n",
@@ -104,7 +124,8 @@
     "        self.right.find_max()\n",
     "\n",
     "\n",
-    "# helper method to build tree (note: isse sirf tree build kar rahe ho islie iske andar add_child method use hoyega, traversal wala nahi)\n",
+    "# helper method to build tree \n",
+    "# (note: isse sirf tree build kar rahe ho islie iske andar add_child method use hoyega, traversal wala nahi)\n",
     "def build_tree(elements):\n",
     "    root = BinarySearchTreeNode(elements[0])\n",
     "    for i in range(1,len(elements)):\n",
@@ -122,6 +143,34 @@
     "    print(numbers_tree.search(-2))\n",
     "    print(\"find minimum\")\n",
     "    print(numbers_tree.find_min())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rough"
    ]
   },
   {
