--- a/OOPs/rough.ipynb
+++ b/OOPs/rough.ipynb
@@ -2,87 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Atm:\n",
-    "    \n",
-    "    #class variable\n",
-    "    counter = 0\n",
     "\n",
     "    def __init__(self):\n",
-    "        self.pin = False\n",
-    "        self.balance = 0\n",
-    "        Atm.counter += 1\n",
+    "        self.__balance = 0\n",
+    "        self.__pin = None\n",
+    "\n",
+    "    def show_menu(self):\n",
+    "        self.menu = \"\"\"\n",
+    "        1. check balance\n",
+    "        2. update/create pin\n",
+    "        \"\"\"\n",
+    "        return self.menu\n",
+    "\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self.show_menu()\n",
     "\n",
     "\n",
-    "    def get_counter(self):\n",
-    "        print(f\"counter = {Atm.counter}\")\n",
+    "    def get_pin(self):\n",
+    "        return self.__pin\n",
     "\n",
-    "\n",
-    "    def set_counter(self, new_counter):\n",
-    "        Atm.counter = new_counter\n",
-    "\n",
-    "    "
+    "    def set_pin(self, new_pin):\n",
+    "        self.__pin = new_pin\n",
+    "        return \"pin updated\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "counter = 11\n"
+      "\n",
+      "        1. check balance\n",
+      "        2. update/create pin\n",
+      "        \n"
      ]
     }
    ],
    "source": [
-    "# hdfc = Atm()\n",
-    "\n",
-    "hdfc.get_counter()\n",
-    "# hdfc.set_counter(10)"
+    "hdfc= Atm()\n",
+    "print(hdfc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "1234"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hdfc.counter"
+    "hdfc.get_pin()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "counter = 11\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'pin updated'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "sbi = Atm()\n",
-    "sbi.get_counter()"
+    "hdfc.set_pin(1234)"
    ]
   },
   {
