--- a/OOPs/rough.ipynb
+++ b/OOPs/rough.ipynb
@@ -2,60 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Atm:\n",
     "\n",
+    "    counter = 1\n",
     "    def __init__(self):\n",
-    "        self.__balance = 0\n",
     "        self.__pin = None\n",
+    "        self.__balance = None\n",
+    "        self.sno = Atm.counter\n",
+    "        Atm.counter += 1\n",
     "\n",
-    "    def show_menu(self):\n",
-    "        self.menu = \"\"\"\n",
-    "        1. check balance\n",
-    "        2. update/create pin\n",
-    "        \"\"\"\n",
-    "        return self.menu\n",
-    "\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        return self.show_menu()\n",
     "\n",
     "\n",
     "    def get_pin(self):\n",
     "        return self.__pin\n",
     "\n",
-    "    def set_pin(self, new_pin):\n",
-    "        self.__pin = new_pin\n",
-    "        return \"pin updated\""
+    "\n",
+    "    def set_pin(self, new):\n",
+    "        self.__pin = new\n",
+    "        return \"pin changed\"\n",
+    "\n",
+    "    \n",
+    "    def get_counter(self):\n",
+    "        return Atm.counter\n",
+    "\n",
+    "\n",
+    "    def set_counter(self, new):\n",
+    "        Atm.counter = new\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def get_balance(self):\n",
+    "        return self.__balance\n",
+    "\n",
+    "\n",
+    "    def set_balance(self, new):\n",
+    "        self.__balance = new\n",
+    "        return \"balance changed\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdfc = Atm()\n",
+    "hdfc.get_pin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "        1. check balance\n",
-      "        2. update/create pin\n",
-      "        \n"
-     ]
+     "data": {
+      "text/plain": [
+       "'pin changed'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "hdfc= Atm()\n",
-    "print(hdfc)"
+    "hdfc.set_pin(1234)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +85,7 @@
        "1234"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,22 +96,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'pin updated'"
+       "2"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hdfc.set_pin(1234)"
+    "hdfc.get_counter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pnb = Atm()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pnb.get_counter()"
    ]
   },
   {
