--- a/OOPs/rough.ipynb
+++ b/OOPs/rough.ipynb
@@ -2,145 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Atm:\n",
-    "\n",
-    "    counter = 1\n",
-    "    def __init__(self):\n",
-    "        self.__pin = None\n",
-    "        self.__balance = None\n",
-    "        self.sno = Atm.counter\n",
-    "        Atm.counter += 1\n",
+    "class Gadget:\n",
+    "    def __init__(self, gadget_name, brand_name, weight):\n",
+    "        self.gadget_name = gadget_name\n",
+    "        self.brand_name = brand_name\n",
+    "        self.weight = weight\n",
     "\n",
     "\n",
     "\n",
-    "    def get_pin(self):\n",
-    "        return self.__pin\n",
     "\n",
     "\n",
-    "    def set_pin(self, new):\n",
-    "        self.__pin = new\n",
-    "        return \"pin changed\"\n",
+    "# types of gadget = Laptop, Smartphone, music player, dvd player\n",
     "\n",
-    "    \n",
-    "    def get_counter(self):\n",
-    "        return Atm.counter\n",
-    "\n",
-    "\n",
-    "    def set_counter(self, new):\n",
-    "        Atm.counter = new\n",
-    "\n",
-    "\n",
-    "\n",
-    "    def get_balance(self):\n",
-    "        return self.__balance\n",
-    "\n",
-    "\n",
-    "    def set_balance(self, new):\n",
-    "        self.__balance = new\n",
-    "        return \"balance changed\"\n"
+    "class Smartphone(Gadget):\n",
+    "    def __init__(self, gadget_name, brand_name, weight, processor, ram):\n",
+    "        super().__init__(gadget_name, brand_name, weight)\n",
+    "        self.processor = processor\n",
+    "        self.ram = ram\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdfc = Atm()\n",
-    "hdfc.get_pin()"
+    "x = Smartphone(\"Smartphone\", \"Apple\", 30, \"OS X\", \"4 gb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'pin changed'"
+       "30"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hdfc.set_pin(1234)"
+    "x.weight"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1234"
+       "'Smartphone'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hdfc.get_pin()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hdfc.get_counter()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pnb = Atm()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pnb.get_counter()"
+    "x.gadget_name"
    ]
   },
   {
