--- a/fibonacci/fibonacci.ipynb
+++ b/fibonacci/fibonacci.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Program nth term of a fibonacci | recursion"
+    "### nth term of a fibonacci | recursion"
    ]
   },
   {
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Value of 5th term of the fibonacci = 3\n",
+      "Value of 10th term of the fibonacci = 34\n",
       "*****VERIFY******\n",
       "postion : 1\n",
       "index : 0\n",
@@ -131,8 +131,8 @@
     "    \n",
     "\n",
     "\n",
-    "nth_term  = 5\n",
-    "print(f\"Value of {nth_term}th term of the fibonacci = {fib(nth_term-1)}\")\n",
+    "nth_term  = 10\n",
+    "print(f\"Value of {nth_term}th term of the fibonacci = {fib(nth_term-1)}\") # trick : input = nth_term / fib(input-1)\n",
     "\n",
     "\n",
     "### verify\n",
@@ -144,6 +144,20 @@
     "    print(f\"value : {value}\")\n",
     "    print()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### nth term of a fibonacci | iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -163,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Program first n terms of a fibonacci using recursion"
+    "### first n terms of a fibonacci using recursion"
    ]
   },
   {
@@ -226,12 +240,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Program to display the Fibonacci sequence up to nth term (ref : https://www.programiz.com/python-programming/examples/fibonacci-sequence)"
+    "### first n terms of Fibonacci | Iteration\n",
+    "#### (ref : https://www.programiz.com/python-programming/examples/fibonacci-sequence)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +257,13 @@
       "0\n",
       "1\n",
       "1\n",
-      "2\n"
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
      ]
     }
    ],
@@ -438,6 +459,141 @@
    "source": [
     "for _ in range(0,100):\n",
     "    print(next(output))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rough | nth term of fibonacci, recursion, OOPs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# method - 1 | no constructor\n",
+    "class Fibonacci_series:\n",
+    "\n",
+    "    def fib(self,n):\n",
+    "        if n==0 or n==1:\n",
+    "            return n\n",
+    "        else:\n",
+    "            return self.fib(n-1) + self.fib(n-2)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    x= Fibonacci_series()\n",
+    "    print(x.fib(6-1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Fibonacci_series.fib() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m     15\u001b[0m     x\u001b[39m=\u001b[39m Fibonacci_series(\u001b[39m5\u001b[39m)\n\u001b[1;32m---> 16\u001b[0m     \u001b[39mprint\u001b[39m(x\u001b[39m.\u001b[39;49mfib())\n",
+      "Cell \u001b[1;32mIn[13], line 11\u001b[0m, in \u001b[0;36mFibonacci_series.fib\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn\n\u001b[0;32m     10\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 11\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfib(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mn\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m) \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfib(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Fibonacci_series.fib() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "# method - 2 | with constructor\n",
+    "class Fibonacci_series:\n",
+    "\n",
+    "    def __init__(self, n):\n",
+    "        self.n = n\n",
+    "\n",
+    "    def fib(self):\n",
+    "        if self.n==0 or self.n==1:\n",
+    "            return self.n\n",
+    "        else:\n",
+    "            return self.fib(self.n-1) + self.fib(self.n-2)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    x= Fibonacci_series(5)\n",
+    "    print(x.fib())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Fibonacci_series:\n",
+    "\n",
+    "    def __init__(self, n):\n",
+    "        self.n = n\n",
+    "\n",
+    "    def fib(self, n=None):  # Add a parameter for the recursive calls\n",
+    "        if n is None:\n",
+    "            n = self.n\n",
+    "        \n",
+    "        if n == 0 or n == 1:\n",
+    "            return n\n",
+    "        else:\n",
+    "            return self.fib(n - 1) + self.fib(n - 2)  # Call the method recursively without arguments\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    x = Fibonacci_series(5)\n",
+    "    print(x.fib())\n"
    ]
   },
   {
