--- a/rough.ipynb
+++ b/rough.ipynb
@@ -2,75 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 5\n",
-      "Did not find 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "numbers = [1, 2, 3, 4, 5]\n",
-    "for num in numbers:\n",
-    "    if num == 5:\n",
-    "        print(\"Found 5\")\n",
-    "        # break\n",
-    "else:\n",
-    "    print(\"Did not find 5\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jobs - Interview\n",
-      "Personal Projects\n",
-      "Practice - NPMS\n",
-      "Practice - Python\n",
-      "Practice- Computer Vision\n",
-      "Practice-SQL\n",
-      "Time Series Analysis\n",
-      "venv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "# for i in os.listdir(\"../Practice - Python/\"):\n",
-    "for i in os.listdir(\"C:/Users/being/Dt Sci-Work/\"):\n",
-    "    print(i)"
+    "# find sum of nth term\n",
+    "\n",
+    "def find_sum(n):\n",
+    "\n",
+    "    if n == 1:\n",
+    "        return n\n",
+    "\n",
+    "    else:\n",
+    "        return n + find_sum(n-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\being\\Dt Sci-Work\n"
-     ]
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
-    "\n",
-    "current_directory = os.getcwd()  # Get the current working directory\n",
-    "parent_directory = os.path.dirname(current_directory)  # Get the parent directory\n",
-    "\n",
-    "print(parent_directory)\n"
+    "find_sum(10)"
    ]
   },
   {
