dsa notes, decorator-notes

--- a/fibonacci/fibonacci.ipynb
+++ b/fibonacci/fibonacci.ipynb
@@ -564,36 +564,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "4th term is 3\n",
+      "first 4 term(s)\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n"
      ]
     }
    ],
    "source": [
-    "class Fibonacci_series:\n",
+    "class Fib:\n",
     "\n",
-    "    def __init__(self, n):\n",
+    "    def __init__(self,n):\n",
     "        self.n = n\n",
     "\n",
-    "    def fib(self, n=None):  # Add a parameter for the recursive calls\n",
+    "    def nth_term(self, n = None):\n",
     "        if n is None:\n",
     "            n = self.n\n",
-    "        \n",
+    "\n",
     "        if n == 0 or n == 1:\n",
     "            return n\n",
+    "        \n",
     "        else:\n",
-    "            return self.fib(n - 1) + self.fib(n - 2)  # Call the method recursively without arguments\n",
+    "            return self.nth_term(n-1) + self.nth_term(n-2)\n",
+    "        \n",
+    "\n",
+    "    def first_n_terms(self, n = None):\n",
+    "        if n is None:\n",
+    "            n = self.n\n",
+    "\n",
+    "        print(f\"first {n} term(s)\")\n",
+    "        for i in range(0,n):\n",
+    "            print(self.nth_term(i))\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    x = Fibonacci_series(5)\n",
-    "    print(x.fib())\n"
+    "\n",
+    "    x = Fib(int(input(\"enter the number\"))-1)\n",
+    "    print(f\"{x.n}th term is {x.nth_term()}\")\n",
+    "    x.first_n_terms()"
    ]
   },
   {
