--- a/prime_numbers.ipynb
+++ b/prime_numbers.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defn : Numbers that are divisible by itself only (except 1)\n",
+    "### note : 1 is not a prime number"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -28,6 +36,41 @@
     "\n",
     "print(primeNum)\n",
     "print(len(primeNum))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## My method | Inspired from telusko"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prime\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_prime(num):\n",
+    "    if num == 1:\n",
+    "        return \"not prime\"\n",
+    "    for i in range(2, num):\n",
+    "        if num % i == 0:\n",
+    "            return \"not prime\"\n",
+    "    else:\n",
+    "        return \"prime\"\n",
+    "    \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(check_prime(6700417))"
    ]
   },
   {
