--- a/rough.ipynb
+++ b/rough.ipynb
@@ -2,40 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# find sum of nth term\n",
+    "def add_mod(fun):\n",
+    "    def main():\n",
+    "        return fun() + float(input(\"enter num 3\"))\n",
+    "    return main\n",
     "\n",
-    "def find_sum(n):\n",
+    "@add_mod\n",
+    "def add():\n",
+    "    num1 = float(input(\"enter num 1\"))\n",
+    "    num2 = float(input(\"enter num 2\"))\n",
+    "    result = num1 + num2\n",
+    "    return result\n",
     "\n",
-    "    if n == 1:\n",
-    "        return n\n",
     "\n",
-    "    else:\n",
-    "        return n + find_sum(n-1)"
+    "if __name__ == \"__main__\":\n",
+    "    print(add())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "55"
+       "18.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "find_sum(10)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
